--- a/src/large_scale experiment/featureExtractor/video_stream/templates/index.html
+++ b/src/large_scale experiment/featureExtractor/video_stream/templates/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Video Streaming Demonstration</title>
+    <title>Video Streaming</title>
   </head>
   <body>
     <h1>Video Streaming</h1>
